--- a/Other THA/all-tha-app/package.json
+++ b/Other THA/all-tha-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "all-tha-app",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -40,5 +40,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "."
 }
